trunk/Archive2/e6/abc0cb4e1c4723/output
main.cpp: In function ‘int main()’:
main.cpp:6:20: error: scalar object ‘n’ requires one element in initializer
     int* n = {1,2,3};
                    ^
main.cpp:7:24: error: initializer fails to determine size of ‘o’
     int o[] = new int[4];
                        ^
main.cpp:7:24: error: array must be initialized with a brace-enclosed initializer
main.cpp:5:9: warning: unused variable ‘m’ [-Wunused-variable]
     int m[] = {1,2,3}; 
         ^
main.cpp:7:9: warning: unused variable ‘o’ [-Wunused-variable]
     int o[] = new int[4];
         ^
